# betstay-monorepo

./: .dockerignore  .env  .gitignore  docker-compose.yml  go.mod  go.work  nx.json  package-lock.json  package.json  sonar-project.properties  tsconfig.json
.github/workflows/: deploy-auth-service.yml  deploy-betting.yml  deploy-booking.yml  deploy-gateway.yml  deploy-web-client.yml
apps/api-gateway/: Dockerfile  jest.config.cts  package.json
apps/api-gateway/src/app/: app.controller.ts  app.module.ts  app.service.ts
apps/auth-service/: .env  Dockerfile  package.json
apps/auth-service/coverage/apps/auth-service/: index.html
apps/auth-service/prisma/: schema.prisma
apps/auth-service/src/: main.ts
apps/auth-service/src/app/: app.module.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  users.module.ts  users.service.spec.ts  users.service.ts
apps/auth-service/src/application/dto/: create-user.dto.ts  (+5 more)
apps/betting-engine/: Dockerfile  README.md  project.json  pyproject.toml
apps/betting-engine/betting_engine/: __init__.py  hello.py  main.py
apps/betting-engine/tests/: test_hello.py
apps/booking-engine/: Dockerfile  go.mod  main.go  main_test.go  project.json
apps/hotel-core/: Dockerfile  jest.config.cts  package.json
apps/hotel-core-e2e/: jest.config.cts  package.json  tsconfig.json
apps/hotel-core/prisma/: schema.prisma
apps/web-client/: Dockerfile  jest.config.cts  next.config.js  package.json  tsconfig.json
apps/web-client/src/app/: layout.tsx  page.tsx
apps/web-client/src/context/: AuthContext.tsx
docker-resources/: init.sql
(+21 files in other folders)
