[tool.coverage.run]
branch = true
source = [ "betting_engine" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = """
 --cov
 --cov-report html:'../../coverage/apps/betting-engine/html'
 --cov-report xml:'../../coverage/apps/betting-engine/coverage.xml'
 --html='../../reports/apps/betting-engine/unittests/html/index.html'
 --junitxml='../../reports/apps/betting-engine/unittests/junit.xml'
"""

[tool.poetry]
name = "betting_engine"
version = "1.0.0"
description = "Motor de Apuestas"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "betting_engine"

  [tool.poetry.dependencies]
  python = ">=3.9,<3.11"

  [tool.poetry.group.dev.dependencies]
  autopep8 = "2.3.1"
  flake8 = "7.1.1"
  pytest = "8.3.4"
  pytest-sugar = "1.0.0"
  pytest-cov = "6.0.0"
  pytest-html = "4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
